# logforth

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  examples  licenserc.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml  typos.toml
.cargo/: config.toml
.github/: semantic.yml
.github/workflows/: ci.yml
appenders/async/: Cargo.toml  README.md
appenders/async/src/: append.rs  channel.rs  lib.rs  state.rs  worker.rs
appenders/async/tests/: flushes.rs
appenders/asynchronous/: Cargo.toml  README.md
appenders/asynchronous/src/: append.rs  lib.rs  state.rs  worker.rs
appenders/fastrace/: Cargo.toml
appenders/fastrace/src/: lib.rs
appenders/file/: Cargo.toml
appenders/file/src/: append.rs  lib.rs  rolling.rs
appenders/file/tests/: global_file_limit.rs
appenders/journald/: Cargo.toml
appenders/journald/src/: field.rs  lib.rs  memfd.rs
appenders/opentelemetry/: Cargo.toml
appenders/opentelemetry/src/: lib.rs
appenders/syslog/: Cargo.toml
appenders/syslog/src/: lib.rs
bridges/log/: Cargo.toml
bridges/log/src/: lib.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: error.rs  kv.rs  lib.rs  record.rs  str.rs
core/src/append/: mod.rs  stdio.rs  testing.rs
core/src/bridge/: log.rs  mod.rs
core/src/diagnostic/: mod.rs  static_global.rs  thread_local.rs
core/src/filter/: mod.rs
core/src/filter/env_filter/: mod.rs  tests.rs
core/src/layout/: mod.rs  plain_text.rs
core/src/logger/: builder.rs  log_impl.rs  mod.rs
core/src/trap/: best_effort.rs  default.rs  mod.rs
diagnostics/fastrace/: Cargo.toml
diagnostics/fastrace/src/: lib.rs
diagnostics/task-local/: Cargo.toml
diagnostics/task-local/src/: lib.rs
diagnostics/tokio-task-local/: Cargo.toml
diagnostics/tokio-task-local/src/: lib.rs
diagnostics/tokio-task-local/tests/: simple.rs
examples/: Cargo.toml  colored_stdio.rs  custom_layout_filter.rs  default_filter_respect_env.rs  directive_filter.rs  env_filter.rs  fastrace.rs  fn_layout_filter.rs  google_cloud_logging.rs  google_structured_log.rs  in_tests.rs  journald.rs  json_stdio.rs  json_stdout.rs  log_with_logger.rs  multiple_dispatches.rs  no_color_stdio.rs  rolling_file.rs  simple_stdio.rs  simple_stdout.rs  single_file.rs  syslog.rs  testing.rs  text_stdio.rs
examples/src/: asynchronous.rs  custom_layout_filter.rs  fastrace.rs  google_cloud_logging.rs  journald.rs  json_stdout.rs  log_with_logger.rs  multiple_dispatches.rs  per_module_log_levels.rs  per_module_with_ctor.rs  rolling_file.rs  simple_stdout.rs  single_file.rs  syslog.rs  task_local.rs
filters/env/: Cargo.toml
filters/rustlog/: Cargo.toml  README.md
filters/rustlog/src/: lib.rs  tests.rs
layouts/google-cloud-logging/: Cargo.toml
layouts/google-cloud-logging/src/: lib.rs
layouts/json/: Cargo.toml
layouts/json/src/: lib.rs
layouts/logfmt/: Cargo.toml
layouts/logfmt/src/: lib.rs
layouts/text/: Cargo.toml
layouts/text/src/: lib.rs
logforth/: Cargo.toml
logforth/examples/: asynchronous.rs  custom_layout_filter.rs  fastrace.rs  google_cloud_logging.rs  journald.rs  json_stdout.rs  log_with_logger.rs  multiple_dispatches.rs  rolling_file.rs  simple_stdout.rs  single_file.rs  syslog.rs  task_local.rs  testing.rs
logforth/src/: lib.rs  starter_log.rs
logforth/tests/: global_async_sink.rs  recursive_logging.rs
src/: color.rs  dynlog.rs  error.rs  format.rs  kv.rs  lib.rs  logger.rs  record.rs  str.rs  time.rs
src/append/: boxdyn.rs  boxlog.rs  dispatch.rs  fastrace.rs  mod.rs  opentelemetry.rs  stderr.rs  stdio.rs  stdout.rs  syslog.rs  testing.rs
src/append/file/: README.md  append.rs  clock.rs  mod.rs  non_blocking.rs  rolling.rs  worker.rs
src/append/journald/: README.md  field.rs  memfd.rs  mod.rs
src/append/rolling_file/: README.md  append.rs  clock.rs  mod.rs  non_blocking.rs  rolling.rs  rotation.rs  worker.rs
src/append/single_file/: append.rs  mod.rs  single.rs
src/appender/: mod.rs  stderr.rs  stdout.rs  utils.rs
src/bridge/: log.rs  mod.rs
src/diagnostic/: custom.rs  fastrace.rs  mod.rs  static_global.rs  thread_local.rs
src/encoder/: custom.rs  json.rs  layout_wrapping.rs  mod.rs
src/filter/: boxdyn.rs  custom.rs  directive.rs  env.rs  env_filter.rs  level.rs  log_level.rs  min_level.rs  mod.rs  target.rs
src/filter/env_filter/: README.md  directive.rs  filter.rs  mod.rs  op.rs  parser.rs  tests.rs
src/format/: json.rs  mod.rs
src/layout/: boxdyn.rs  colored_simple_text.rs  custom.rs  google_cloud_logging.rs  google_structured_log.rs  identical.rs  json.rs  kv.rs  kv_display.rs  logfmt.rs  mod.rs  plain_text.rs  record_builder.rs  simple_json.rs  simple_text.rs  text.rs
src/logger/: builder.rs  dispatch.rs  log_impl.rs  logger.rs  mod.rs  utility.rs
src/marker/: custom.rs  fastrace.rs  mod.rs
src/non_blocking/: builder.rs  mod.rs  non_blocking.rs  worker.rs
src/record/: kv.rs  mod.rs
tests/: recursive_logging.rs  test_file_limit.rs
xtask/: Cargo.toml
xtask/src/: main.rs
