# Copyright 2024 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "logforth"

description = "A versatile and extensible logging implementation."
edition = "2021"
homepage = "https://github.com/fast/logforth"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/fast/logforth"
rust-version = "1.80.0"
version = "0.23.1"

categories = ["development-tools::debugging"]
keywords = ["logging", "log", "opentelemetry", "fastrace"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["google_structured_log"]

colored = ["dep:colored"]
fastrace = ["dep:fastrace"]
google_structured_log = ["json", "log/kv_serde"]
journald = ["dep:libc"]
json = ["dep:serde_json", "dep:serde", "jiff/serde"]
native-tls = ["dep:native-tls", "fasyslog?/native-tls"]
non-blocking = ["dep:crossbeam-channel"]
opentelemetry = [
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
]
rolling-file = ["non-blocking"]
syslog = ["non-blocking", "dep:fasyslog"]

[dependencies]
anyhow = { version = "1.0" }
env_filter = { version = "0.1.1" }
jiff = { version = "0.2" }
log = { version = "0.4", features = ["std", "kv"] }

# Optional dependencies
colored = { version = "3.0", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
fastrace = { version = "0.7", optional = true }
fasyslog = { version = "1.0.0", optional = true }
libc = { version = "0.2.162", optional = true }
native-tls = { version = "0.2", optional = true }
opentelemetry = { version = "0.29.0", features = ["logs"], optional = true }
opentelemetry-otlp = { version = "0.29.0", features = [
  "logs",
  "grpc-tonic",
  "http-json",
  "http-proto",
], optional = true }
opentelemetry_sdk = { version = "0.29.0", features = [
  "logs",
  "rt-tokio",
], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
rand = { version = "0.9" }
tempfile = { version = "3.16" }
tokio = { version = "1", features = ["rt-multi-thread"] }

## Examples

[[example]]
doc-scrape-examples = true
name = "simple_stdout"
path = "examples/simple_stdout.rs"

[[example]]
doc-scrape-examples = true
name = "json_stdout"
path = "examples/json_stdout.rs"
required-features = ["json"]

[[example]]
doc-scrape-examples = true
name = "multiple_dispatches"
path = "examples/multiple_dispatches.rs"

[[example]]
doc-scrape-examples = true
name = "rolling_file"
path = "examples/rolling_file.rs"
required-features = ["rolling-file", "json"]

[[example]]
doc-scrape-examples = true
name = "custom_layout_filter"
path = "examples/custom_layout_filter.rs"

[[example]]
doc-scrape-examples = true
name = "syslog"
path = "examples/syslog.rs"
required-features = ["syslog"]

[[example]]
doc-scrape-examples = true
name = "journald"
path = "examples/journald.rs"
required-features = ["journald"]

[[example]]
doc-scrape-examples = true
name = "fastrace"
path = "examples/fastrace.rs"
required-features = ["fastrace", "fastrace/enable"]

[[example]]
doc-scrape-examples = true
name = "google_structured_log"
path = "examples/google_structured_log.rs"
required-features = ["fastrace", "fastrace/enable", "google_structured_log"]
