# Copyright 2024 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "logforth"

description = "A versatile and extensible logging implementation."
edition = "2024"
homepage = "https://github.com/fast/logforth"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/fast/logforth"
rust-version = "1.85.0"
version = "0.27.0"

categories = ["development-tools::debugging"]
keywords = ["logging", "log", "opentelemetry", "fastrace"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

# Appenders
append-fastrace = ["dep:fastrace"]
append-journald = ["dep:libc"]
append-opentelemetry = [
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
]
append-syslog = ["dep:fasyslog"]

# Layouts
layout-google-cloud-logging = [
  "dep:serde",
  "dep:serde_json",
  "log/kv_serde",
  "jiff/serde",
]
layout-json = ["dep:serde", "dep:serde_json", "log/kv_serde", "jiff/serde"]

# Diagnostics
diagnostic-fastrace = ["dep:fastrace"]

# Standalone features
colored = ["dep:colored"]
native-tls = ["dep:native-tls", "fasyslog?/native-tls"]
rustls = ["dep:rustls", "fasyslog?/rustls"]

[dependencies]
anyhow = { version = "1.0" }
jiff = { version = "0.2" }
log = { version = "0.4.27", features = ["kv_std", "kv_sval"] }

# Optional dependencies
colored = { version = "3.0", optional = true }
fastrace = { version = "0.7", optional = true }
fasyslog = { version = "1.0.0", optional = true }
libc = { version = "0.2.162", optional = true }
native-tls = { version = "0.2", optional = true }
opentelemetry = { version = "0.31.0", optional = true, default-features = false, features = [
  "logs",
] }
opentelemetry-otlp = { version = "0.31.0", optional = true, default-features = false, features = [
  "logs",
] }
opentelemetry_sdk = { version = "0.31.0", optional = true, default-features = false, features = [
  "logs",
] }
rustls = { version = "0.23.27", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
insta = { version = "1.43.2" }
opentelemetry = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0" }
rand = { version = "0.9" }
tempfile = { version = "3.16" }

[[example]]
doc-scrape-examples = true
name = "testing"
path = "examples/testing.rs"

[[example]]
doc-scrape-examples = true
name = "simple_stdout"
path = "examples/simple_stdout.rs"

[[example]]
doc-scrape-examples = true
name = "log_with_logger"
path = "examples/log_with_logger.rs"

[[example]]
doc-scrape-examples = true
name = "json_stdout"
path = "examples/json_stdout.rs"
required-features = ["layout-json"]

[[example]]
doc-scrape-examples = true
name = "multiple_dispatches"
path = "examples/multiple_dispatches.rs"

[[example]]
doc-scrape-examples = true
name = "rolling_file"
path = "examples/rolling_file.rs"
required-features = ["layout-json"]

[[example]]
doc-scrape-examples = true
name = "single_file"
path = "examples/single_file.rs"
required-features = ["layout-json"]

[[example]]
doc-scrape-examples = true
name = "custom_layout_filter"
path = "examples/custom_layout_filter.rs"

[[example]]
doc-scrape-examples = true
name = "syslog"
path = "examples/syslog.rs"
required-features = ["append-syslog"]

[[example]]
doc-scrape-examples = true
name = "journald"
path = "examples/journald.rs"
required-features = ["append-journald"]

[[example]]
doc-scrape-examples = true
name = "fastrace"
path = "examples/fastrace.rs"
required-features = [
  "fastrace/enable",
  "append-fastrace",
  "diagnostic-fastrace",
]

[[example]]
doc-scrape-examples = true
name = "google_cloud_logging"
path = "examples/google_cloud_logging.rs"
required-features = [
  "fastrace/enable",
  "diagnostic-fastrace",
  "layout-google-cloud-logging",
]
