# Copyright 2024 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
  "core",
  "examples",
  "logforth",
  "appenders/*",
  "bridges/*",
  "diagnostics/*",
  "layouts/*",
  "xtask",
]
resolver = "2"

[workspace.package]
categories = ["development-tools::debugging"]
edition = "2024"
homepage = "https://github.com/fast/logforth"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/fast/logforth"
rust-version = "1.89.0"

[workspace.dependencies]
# Workspace dependencies
logforth = { version = "0.29.1", path = "logforth" }
logforth-append-async = { version = "0.3.0", path = "appenders/async" }
logforth-append-fastrace = { version = "0.3.0", path = "appenders/fastrace" }
logforth-append-file = { version = "0.3.0", path = "appenders/file" }
logforth-append-journald = { version = "0.3.0", path = "appenders/journald" }
logforth-append-opentelemetry = { version = "0.3.1", path = "appenders/opentelemetry" }
logforth-append-syslog = { version = "0.3.0", path = "appenders/syslog" }
logforth-bridge-log = { version = "0.3.0", path = "bridges/log" }
logforth-core = { version = "0.3.1", path = "core" }
logforth-diagnostic-fastrace = { version = "0.3.0", path = "diagnostics/fastrace" }
logforth-diagnostic-task-local = { version = "0.3.0", path = "diagnostics/task-local" }
logforth-layout-google-cloud-logging = { version = "0.3.0", path = "layouts/google-cloud-logging" }
logforth-layout-json = { version = "0.3.0", path = "layouts/json" }
logforth-layout-logfmt = { version = "0.3.0", path = "layouts/logfmt" }
logforth-layout-text = { version = "0.3.0", path = "layouts/text" }

# Crates.io dependencies
anyhow = { version = "1.0" }
clap = { version = "4.5.49", features = ["derive"] }
colored = { version = "3.0" }
fastrace = { version = "0.7" }
fasyslog = { version = "1.0.0" }
insta = { version = "1.43.2" }
jiff = { version = "0.2" }
libc = { version = "0.2.162" }
log = { version = "0.4.27", features = ["kv_std", "kv_sval"] }
oneshot = { version = "0.1.11", default-features = false, features = ["std"] }
opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry-otlp = { version = "0.31.0", default-features = false }
opentelemetry_sdk = { version = "0.31.0", default-features = false }
pin-project = { version = "1.1.10" }
rand = { version = "0.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tempfile = { version = "3.16" }
tokio = { version = "1.47.1" }
value-bag = { version = "1.11.1", features = ["inline-i128", "owned", "sval"] }
which = { version = "8.0.0" }

[workspace.lints.rust]
unknown_lints = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"

[workspace.metadata.release]
pre-release-commit-message = "chore: Release {{crate_name}} version {{version}}"
sign-commit = true
sign-tag = true
tag-message = "chore: Release {{crate_name}} version {{version}}"
