# Copyright 2024 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "logforth-append-syslog"
version = "0.3.0"

description = "Syslog appender for Logforth."
keywords = ["logging", "log", "syslog"]

categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []

native-tls = ["fasyslog/native-tls"]
rustls = ["fasyslog/rustls"]

[dependencies]
fasyslog = { workspace = true }
logforth-core = { workspace = true }

[dev-dependencies]
log = { workspace = true }

[lints]
workspace = true
