[package]
name = "logforth-filter-rustlog"
version = "0.1.0"

categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
logforth-core = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
